[Australis] Bug 938578: update separator styling in subviews and align related items accordingly. r=Gijs, a=gavin

--- a/browser/themes/linux/customizableui/panelUIOverlay.css
+++ b/browser/themes/linux/customizableui/panelUIOverlay.css
@@ -16,3 +16,10 @@
 .widget-overflow-list .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
   -moz-margin-start: 0;
 }
+
+.PanelUI-subView toolbarseparator,
+.PanelUI-subView menuseparator,
+.cui-widget-panelview menuseparator,
+#PanelUI-footer-inner > toolbarseparator {
+  -moz-appearance: none !important;
+}
